--- a/_all-courses/ma355.md
+++ b/_all-courses/ma355.md
@@ -1,4 +1,46 @@
 ---
 title: "Topics in Geometric Topology: Geometric structures"
 code: MA 355
+prereqs:
+    - Topology (MA 231)
+    - Introduction to Algebraic Topology (MA 232) or equivalent
+    - preferably MA 335 (Introduction to Hyperbolic Manifolds) or equivalent
+books:
+    - author: W. P. Thurston
+      title: Three-dimensional Geometry and Topology
+      publ: Princeton University Press, 1997
+    - author: B. Martelli
+      title: An Introduction to Geometric Topology
+      publ: CreateSpace Publishing, 2016
 ---
+
+This course would be a survey of fundamental results as well as current research. Topics will be related to the following areas:  geometric structures on surfaces, hyperbolic 3-manifolds, Riemann surfaces and Teichmüller theory, and will focus on the various interactions between these fields.  Students will be encouraged to explore open-ended questions and/or write related computer programs. The following is the course plan: 
+
+
+Part I
+
+1. A review of hyperbolic structures on surfaces
+2. A review of Teichmüller spaces and mapping class groups
+3. The topology of the PSL(2,R) representation variety
+4. The notion of a geometric structure or (G,X)-structure on a manifold
+
+Part II 
+
+{:start="5"}
+5. Translation structures on a surface
+6. Holomorphic 1-forms and their periods
+7. An introduction to Teichmüller dynamics
+
+Part III 
+
+{:start="8"}
+8. Complex projective structures on a surface
+9. Surface group representations into PSL(2,C)
+10. The Schwarzian derivative and holomorphic quadratic differentials
+11. Measured laminations and Thurston’s grafting theorem
+
+Part IV
+
+{:start="12"}
+12. Other geometric structures, including affine structures and real projective structures
+13. The case of open surfaces. 
