--- a/_all-courses/ma390.md
+++ b/_all-courses/ma390.md
@@ -16,7 +16,7 @@ books:
   - author: Geoffrey Grimmett 
     title: Percolation
     publ: Springer
-prereq-courses: MA361
+prereq-courses: "UM 201 or MA 261"
 ug-prereq-courses: 
 ---
 
