--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,368 @@
+@article {MR4332957,
+    AUTHOR = {Poria, Anirudha},
+     TITLE = {Uncertainty principles for the {F}ourier and the short-time
+              {F}ourier transforms},
+   JOURNAL = {J. Math. Phys.},
+  FJOURNAL = {Journal of Mathematical Physics},
+    VOLUME = {62},
+      YEAR = {2021},
+    NUMBER = {11},
+     PAGES = {Paper No. 113501, 9},
+      ISSN = {0022-2488},
+   MRCLASS = {42B10},
+  MRNUMBER = {4332957},
+       DOI = {10.1063/5.0047191},
+       URL = {https://doi.org/10.1063/5.0047191},
+}
+		
+@article {MR4332597,
+    AUTHOR = {Biswas, Subhojit and Ghosh, Mrinal K. and Mukherjee, Diganta},
+     TITLE = {Portfolio optimization managing value at risk under heavy tail
+              return, using stochastic maximum principle},
+   JOURNAL = {Stoch. Anal. Appl.},
+  FJOURNAL = {Stochastic Analysis and Applications},
+    VOLUME = {39},
+      YEAR = {2021},
+    NUMBER = {6},
+     PAGES = {1025--1049},
+      ISSN = {0736-2994},
+   MRCLASS = {91G10 (49K45 49L20 90C39 91G80 93E20)},
+  MRNUMBER = {4332597},
+       DOI = {10.1080/07362994.2020.1864405},
+       URL = {https://doi.org/10.1080/07362994.2020.1864405},
+}
+		
+@article {MR4330864,
+    AUTHOR = {Roy, Saikat and Sain, Debmalya},
+     TITLE = {Numerical radius and a notion of smoothness in the space of
+              bounded linear operators},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {173},
+      YEAR = {2021},
+     PAGES = {Paper No. 103070, 15},
+      ISSN = {0007-4497},
+   MRCLASS = {47A12 (46A32 47A30)},
+  MRNUMBER = {4330864},
+       DOI = {10.1016/j.bulsci.2021.103070},
+       URL = {https://doi.org/10.1016/j.bulsci.2021.103070},
+}
+		
+@article {MR4329283,
+    AUTHOR = {Gallagher, A.-K. and Gupta, P. and Lanzani, L. and Vivas, L.},
+     TITLE = {Hardy spaces for a class of singular domains},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {299},
+      YEAR = {2021},
+    NUMBER = {3-4},
+     PAGES = {2171--2197},
+      ISSN = {0025-5874},
+   MRCLASS = {30H10},
+  MRNUMBER = {4329283},
+       DOI = {10.1007/s00209-021-02755-1},
+       URL = {https://doi.org/10.1007/s00209-021-02755-1},
+}
+		
+@article {MR4327425,
+    AUTHOR = {Feichtinger, Hans and Gumber, Anupam},
+     TITLE = {Completeness of shifted dilates in invariant {B}anach spaces
+              of tempered distributions},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {149},
+      YEAR = {2021},
+    NUMBER = {12},
+     PAGES = {5195--5210},
+      ISSN = {0002-9939},
+   MRCLASS = {43A15 (41A30 41A65 43A10 46B50 46F05)},
+  MRNUMBER = {4327425},
+       DOI = {10.1090/proc/15564},
+       URL = {https://doi.org/10.1090/proc/15564},
+}
+		
+@article {MR4327414,
+    AUTHOR = {Khare, Apoorva},
+     TITLE = {Sharp nonzero lower bounds for the {S}chur product theorem},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {149},
+      YEAR = {2021},
+    NUMBER = {12},
+     PAGES = {5049--5063},
+      ISSN = {0002-9939},
+   MRCLASS = {15B48 (15A45 47B10)},
+  MRNUMBER = {4327414},
+       DOI = {10.1090/proc/15555},
+       URL = {https://doi.org/10.1090/proc/15555},
+}
+		
+@article {MR4325990,
+    AUTHOR = {Anamby, Pramath and Das, Soumya and Pal, Ritwik},
+     TITLE = {Large {H}ecke eigenvalues and an {O}mega result for
+              non-{S}aito-{K}urokawa lifts},
+   JOURNAL = {Ramanujan J.},
+  FJOURNAL = {Ramanujan Journal. An International Journal Devoted to the
+              Areas of Mathematics Influenced by Ramanujan},
+    VOLUME = {56},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {519--531},
+      ISSN = {1382-4090},
+   MRCLASS = {11F46 (11F60)},
+  MRNUMBER = {4325990},
+       DOI = {10.1007/s11139-020-00328-0},
+       URL = {https://doi.org/10.1007/s11139-020-00328-0},
+}
+		
+@article {MR4324811,
+    AUTHOR = {Dasgupta, Samit and Kakde, Mahesh},
+     TITLE = {On constant terms of {E}isenstein series},
+   JOURNAL = {Acta Arith.},
+  FJOURNAL = {Acta Arithmetica},
+    VOLUME = {200},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {119--147},
+      ISSN = {0065-1036},
+   MRCLASS = {11F41 (11F30)},
+  MRNUMBER = {4324811},
+       DOI = {10.4064/aa200621-24-2},
+       URL = {https://doi.org/10.4064/aa200621-24-2},
+}
+		
+@article {MR4320365,
+    AUTHOR = {Datta, Basudeb and Maity, Dipendu},
+     TITLE = {Platonic solids, {A}rchimedean solids and semi-equivelar maps
+              on the sphere},
+   JOURNAL = {Discrete Math.},
+  FJOURNAL = {Discrete Mathematics},
+    VOLUME = {345},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 112652, 13},
+      ISSN = {0012-365X},
+   MRCLASS = {52B10 (52B70)},
+  MRNUMBER = {4320365},
+       DOI = {10.1016/j.disc.2021.112652},
+       URL = {https://doi.org/10.1016/j.disc.2021.112652},
+}
+		
+@article {MR4317503,
+    AUTHOR = {Datar, Ved V. and Pingali, Vamsi Pritham},
+     TITLE = {A numerical criterion for generalised {M}onge-{A}mp\`ere
+              equations on projective manifolds},
+   JOURNAL = {Geom. Funct. Anal.},
+  FJOURNAL = {Geometric and Functional Analysis},
+    VOLUME = {31},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {767--814},
+      ISSN = {1016-443X},
+   MRCLASS = {53C55 (32W20 35K96)},
+  MRNUMBER = {4317503},
+       DOI = {10.1007/s00039-021-00577-1},
+       URL = {https://doi.org/10.1007/s00039-021-00577-1},
+}
+		
+@article {MR4315515,
+    AUTHOR = {Gupta, Purvi and Wawrzyniak, Chloe Urbanski},
+     TITLE = {Stability of the hull(s) of an {$n$}-sphere in {$\Bbb{C}^n$}},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {392},
+      YEAR = {2021},
+     PAGES = {Paper No. 107989, 33},
+      ISSN = {0001-8708},
+   MRCLASS = {32E20 (32V20)},
+  MRNUMBER = {4315515},
+       DOI = {10.1016/j.aim.2021.107989},
+       URL = {https://doi.org/10.1016/j.aim.2021.107989},
+}
+		
+@article {MR4313961,
+    AUTHOR = {Bhimani, Divyang G. and Manna, Ramesh and Nicola, Fabio and
+              Thangavelu, Sundaram and Trapasso, S. Ivan},
+     TITLE = {Phase space analysis of the {H}ermite semigroup and
+              applications to nonlinear global well-posedness},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {392},
+      YEAR = {2021},
+     PAGES = {Paper No. 107995, 18},
+      ISSN = {0001-8708},
+   MRCLASS = {35K05 (35S05 42B35)},
+  MRNUMBER = {4313961},
+       DOI = {10.1016/j.aim.2021.107995},
+       URL = {https://doi.org/10.1016/j.aim.2021.107995},
+}
+		
+@article {MR4313144,
+    AUTHOR = {Bharali, Gautam and Sridharan, Shrihari},
+     TITLE = {The entropy of holomorphic correspondences: exact computations
+              and rational semigroups},
+   JOURNAL = {Ann. Fenn. Math.},
+  FJOURNAL = {Annales Fennici Mathematici},
+    VOLUME = {46},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {1135--1154},
+      ISSN = {2737-0690},
+   MRCLASS = {37F05 (37B40 37F44 37F80)},
+  MRNUMBER = {4313144},
+       DOI = {10.5186/aasfm.2021.4667},
+       URL = {https://doi.org/10.5186/aasfm.2021.4667},
+}
+		
+@article {MR4311937,
+    AUTHOR = {Ayyer, Arvind and Mandelshtam, Olya and Martin, James},
+     TITLE = {Multispecies {TAZRP} and modified {M}acdonald polynomials},
+   JOURNAL = {S\'{e}m. Lothar. Combin.},
+  FJOURNAL = {S\'{e}minaire Lotharingien de Combinatoire},
+    VOLUME = {85B},
+      YEAR = {2021},
+     PAGES = {Art. 56, 12},
+   MRCLASS = {05E05 (05E16)},
+  MRNUMBER = {4311937},
+}
+		
+@article {MR4311813,
+    AUTHOR = {Choudhury, Projesh Nath and Kannan, M. Rajesh and Khare,
+              Apoorva},
+     TITLE = {Sign non-reversal property for totally non-negative and
+              totally positive matrices, and testing total positivity of
+              their interval hull},
+   JOURNAL = {Bull. Lond. Math. Soc.},
+  FJOURNAL = {Bulletin of the London Mathematical Society},
+    VOLUME = {53},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {981--990},
+      ISSN = {0024-6093},
+   MRCLASS = {15B48 (15A24 65G30)},
+  MRNUMBER = {4311813},
+       DOI = {10.1112/blms.12475},
+       URL = {https://doi.org/10.1112/blms.12475},
+}
+		
+@article {MR4310348,
+    AUTHOR = {Ghosh, Mrinal K. and Pradhan, Somnath},
+     TITLE = {Ergodic risk-sensitive stochastic differential games with
+              reflecting diffusions in a bounded domain},
+   JOURNAL = {Stoch. Anal. Appl.},
+  FJOURNAL = {Stochastic Analysis and Applications},
+    VOLUME = {39},
+      YEAR = {2021},
+    NUMBER = {5},
+     PAGES = {819--841},
+      ISSN = {0736-2994},
+   MRCLASS = {91A15 (91A23)},
+  MRNUMBER = {4310348},
+       DOI = {10.1080/07362994.2020.1845207},
+       URL = {https://doi.org/10.1080/07362994.2020.1845207},
+}
+		
+@article {MR4305980,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {On best approximations to compact operators},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {149},
+      YEAR = {2021},
+    NUMBER = {10},
+     PAGES = {4273--4286},
+      ISSN = {0002-9939},
+   MRCLASS = {46B28},
+  MRNUMBER = {4305980},
+       DOI = {10.1090/proc/15494},
+       URL = {https://doi.org/10.1090/proc/15494},
+}
+		
+@article {MR4305579,
+    AUTHOR = {Banerjee, Agnid and Manna, Ramesh},
+     TITLE = {Carleman estimates for a class of variable coefficient
+              degenerate elliptic operators with applications to unique
+              continuation},
+   JOURNAL = {Discrete Contin. Dyn. Syst.},
+  FJOURNAL = {Discrete and Continuous Dynamical Systems. Series A},
+    VOLUME = {41},
+      YEAR = {2021},
+    NUMBER = {11},
+     PAGES = {5105--5139},
+      ISSN = {1078-0947},
+   MRCLASS = {35J70 (35B45)},
+  MRNUMBER = {4305579},
+       DOI = {10.3934/dcds.2021070},
+       URL = {https://doi.org/10.3934/dcds.2021070},
+}
+		
+@article {MR4305457,
+    AUTHOR = {Toft, Joachim and Gumber, Anupam and Manna, Ramesh and
+              Ratnakumar, P. K.},
+     TITLE = {Translation and modulation invariant {H}ilbert spaces},
+   JOURNAL = {Monatsh. Math.},
+  FJOURNAL = {Monatshefte f\"{u}r Mathematik},
+    VOLUME = {196},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {389--398},
+      ISSN = {0026-9255},
+   MRCLASS = {46C15 (42B35 46C05 46F05)},
+  MRNUMBER = {4305457},
+       DOI = {10.1007/s00605-021-01589-7},
+       URL = {https://doi.org/10.1007/s00605-021-01589-7},
+}
+		
+@article {MR4298894,
+    AUTHOR = {Sarkar, Amar Deep and Verma, Kaushal},
+     TITLE = {On the {H}urwitz metric},
+   JOURNAL = {Kodai Math. J.},
+  FJOURNAL = {Kodai Mathematical Journal},
+    VOLUME = {44},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {126--136},
+      ISSN = {0386-5991},
+   MRCLASS = {30F45},
+  MRNUMBER = {4298894},
+       DOI = {10.2996/kmj44108},
+       URL = {https://doi.org/10.2996/kmj44108},
+}
+		
+@article {MR4298855,
+    AUTHOR = {Quddus, Safdar},
+     TITLE = {Equivariant {C}artan homotopy formulae for the crossed product
+              of {$DG$} algebra},
+   JOURNAL = {Rocky Mountain J. Math.},
+  FJOURNAL = {The Rocky Mountain Journal of Mathematics},
+    VOLUME = {51},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {1399--1406},
+      ISSN = {0035-7596},
+   MRCLASS = {16E40 (16E45)},
+  MRNUMBER = {4298855},
+       DOI = {10.1216/rmj.2021.51.1399},
+       URL = {https://doi.org/10.1216/rmj.2021.51.1399},
+}
+		
+@article {MR4292867,
+    AUTHOR = {Gupta, Purvi and Shafikov, Rasul},
+     TITLE = {Polynomially convex embeddings of odd-dimensional closed
+              manifolds},
+   JOURNAL = {J. Reine Angew. Math.},
+  FJOURNAL = {Journal f\"{u}r die Reine und Angewandte Mathematik. [Crelle's
+              Journal]},
+    VOLUME = {777},
+      YEAR = {2021},
+     PAGES = {273--299},
+      ISSN = {0075-4102},
+   MRCLASS = {57R40 (53C15)},
+  MRNUMBER = {4292867},
+       DOI = {10.1515/crelle-2021-0021},
+       URL = {https://doi.org/10.1515/crelle-2021-0021},
+}
+		
 @article {MR4292221,
     AUTHOR = {Sain, Debmalya and Bhunia, Pintu and Bhanja, Aniket and Paul,
               Kallol},
@@ -14,6 +379,72 @@
   MRNUMBER = {4292221},
        DOI = {10.1007/s43034-021-00138-5},
        URL = {https://doi.org/10.1007/s43034-021-00138-5},
+}
+		
+@article {MR4288653,
+    AUTHOR = {Bharali, Gautam and Maitra, Anwoy},
+     TITLE = {A weak notion of visibility, a family of examples, and
+              {W}olff-{D}enjoy theorems},
+   JOURNAL = {Ann. Sc. Norm. Super. Pisa Cl. Sci. (5)},
+  FJOURNAL = {Annali della Scuola Normale Superiore di Pisa. Classe di
+              Scienze. Serie V},
+    VOLUME = {22},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {195--240},
+      ISSN = {0391-173X},
+   MRCLASS = {32F45 (32H50 32U05 53C23)},
+  MRNUMBER = {4288653},
+}
+		
+@article {MR4288328,
+    AUTHOR = {Addario-Berry, Louigi and Sen, Sanchayan},
+     TITLE = {Geometry of the minimal spanning tree of a random 3-regular
+              graph},
+   JOURNAL = {Probab. Theory Related Fields},
+  FJOURNAL = {Probability Theory and Related Fields},
+    VOLUME = {180},
+      YEAR = {2021},
+    NUMBER = {3-4},
+     PAGES = {553--620},
+      ISSN = {0178-8051},
+   MRCLASS = {60C05 (05C80)},
+  MRNUMBER = {4288328},
+       DOI = {10.1007/s00440-021-01071-3},
+       URL = {https://doi.org/10.1007/s00440-021-01071-3},
+}
+		
+@article {MR4287737,
+    AUTHOR = {Garcia-Fernandez, Mario and Pritham Pingali, Vamsi and Yao,
+              Chengjian},
+     TITLE = {Gravitating vortices with positive curvature},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {388},
+      YEAR = {2021},
+     PAGES = {Paper No. 107851, 42},
+      ISSN = {0001-8708},
+   MRCLASS = {53C55 (30F99)},
+  MRNUMBER = {4287737},
+       DOI = {10.1016/j.aim.2021.107851},
+       URL = {https://doi.org/10.1016/j.aim.2021.107851},
+}
+		
+@article {MR4286048,
+    AUTHOR = {Gupta, Subhojoy},
+     TITLE = {Monodromy groups of {$\Bbb C\rm P^1$}-structures on punctured
+              surfaces},
+   JOURNAL = {J. Topol.},
+  FJOURNAL = {Journal of Topology},
+    VOLUME = {14},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {538--559},
+      ISSN = {1753-8416},
+   MRCLASS = {57M50 (20F65)},
+  MRNUMBER = {4286048},
+       DOI = {10.1112/topo.12189},
+       URL = {https://doi.org/10.1112/topo.12189},
 }
 		
 @article {MR4284613,
@@ -99,6 +530,22 @@
        URL = {https://doi.org/10.1016/j.jcta.2021.105492},
 }
 		
+@article {MR4278904,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {A note on {D}emailly's approach towards a conjecture of
+              {G}riffiths},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'{e}matique. Acad\'{e}mie des Sciences. Paris},
+    VOLUME = {359},
+      YEAR = {2021},
+     PAGES = {501--503},
+      ISSN = {1631-073X},
+   MRCLASS = {32J25 (32L05)},
+  MRNUMBER = {4278904},
+       DOI = {10.5802/crmath.192},
+       URL = {https://doi.org/10.5802/crmath.192},
+}
+		
 @article {MR4278694,
     AUTHOR = {Datar, Ved and Jacob, Adam and Zhang, Yuguang},
      TITLE = {Adiabatic limits of anti-self-dual connections on collapsed
@@ -131,6 +578,35 @@
   MRNUMBER = {4278683},
        DOI = {10.1215/00192082-8827639},
        URL = {https://doi.org/10.1215/00192082-8827639},
+}
+		
+@article {MR4278597,
+    AUTHOR = {Iyer, Srikanth K. and Jhawar, Sanjoy Kr},
+     TITLE = {Poisson approximation and connectivity in a scale-free random
+              connection model},
+   JOURNAL = {Electron. J. Probab.},
+  FJOURNAL = {Electronic Journal of Probability},
+    VOLUME = {26},
+      YEAR = {2021},
+     PAGES = {Paper No. 86, 23},
+   MRCLASS = {60D05 (05C80 05C82 60G55)},
+  MRNUMBER = {4278597},
+       DOI = {10.1214/21-ejp651},
+       URL = {https://doi.org/10.1214/21-ejp651},
+}
+		
+@book {MR4278585,
+    AUTHOR = {Chavan, Sameer and Misra, Gadadhar},
+     TITLE = {Notes on the {B}rown-{D}ouglas-{F}illmore theorem},
+    SERIES = {Cambridge-IISc Series},
+ PUBLISHER = {Cambridge University Press, Cambridge},
+      YEAR = {2021},
+     PAGES = {xi+246},
+      ISBN = {978-1-316-51930-1},
+   MRCLASS = {46-02 (46L05 46L80 46M20 47B20)},
+  MRNUMBER = {4278585},
+       DOI = {10.1017/9781009023306},
+       URL = {https://doi.org/10.1017/9781009023306},
 }
 		
 @article {MR4277763,
@@ -284,6 +760,23 @@
        URL = {https://doi.org/10.2140/ant.2021.15.863},
 }
 		
+@article {MR4264398,
+    AUTHOR = {Gayen, Rupanwita and Gupta, Sourav and Chakrabarti, Aloknath},
+     TITLE = {Water wave scattering by a thin vertical submerged permeable
+              plate},
+   JOURNAL = {Math. Model. Anal.},
+  FJOURNAL = {Mathematical Modelling and Analysis},
+    VOLUME = {26},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {223--235},
+      ISSN = {1392-6292},
+   MRCLASS = {76B15 (45E99)},
+  MRNUMBER = {4264398},
+       DOI = {10.3846/mma.2021.13207},
+       URL = {https://doi.org/10.3846/mma.2021.13207},
+}
+		
 @article {MR4263010,
     AUTHOR = {Sen, Jeet and Sain, Debmalya and Paul, Kallol},
      TITLE = {On approximate orthogonality and symmetry of operators in
@@ -317,7 +810,22 @@
        URL = {https://doi.org/10.1007/s00245-019-09606-w},
 }
 		
-@article {MR4256181,
+@article {MR4257159,
+    AUTHOR = {Ghosh, Subhajit},
+     TITLE = {Total variation cutoff for the flip-transpose top with random
+              shuffle},
+   JOURNAL = {ALEA Lat. Am. J. Probab. Math. Stat.},
+  FJOURNAL = {ALEA. Latin American Journal of Probability and Mathematical
+              Statistics},
+    VOLUME = {18},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {985--1006},
+   MRCLASS = {60J10 (60B15 60C05)},
+  MRNUMBER = {4257159},
+       DOI = {10.30757/alea.v18-36},
+       URL = {https://doi.org/10.30757/alea.v18-36},
+}@article {MR4256181,
     AUTHOR = {Nandakumaran, A. K. and Sufian, Abu},
      TITLE = {Strong contrasting diffusivity in general oscillating domains:
               homogenization of optimal control problems},
