--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,71 @@
+@article {MR4343968,
+    AUTHOR = {Choudhury, Projesh Nath and Sivakumar, K. C.},
+     TITLE = {Nesbitt and {S}hapiro cyclic sum inequalities for positive
+              definite matrices},
+   JOURNAL = {Adv. Oper. Theory},
+  FJOURNAL = {Advances in Operator Theory},
+    VOLUME = {7},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 7, 11},
+      ISSN = {2662-2009},
+   MRCLASS = {15A45 (15B57 26D15 47A63)},
+  MRNUMBER = {4343968},
+       DOI = {10.1007/s43036-021-00171-0},
+       URL = {https://doi.org/10.1007/s43036-021-00171-0},
+}
+		
+@article {MR4338342,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {Smoothness and norm attainment of bounded bilinear operators
+              between {B}anach spaces},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {69},
+      YEAR = {2021},
+    NUMBER = {16},
+     PAGES = {3010--3018},
+      ISSN = {0308-1087},
+   MRCLASS = {46G25 (46B20)},
+  MRNUMBER = {4338342},
+       DOI = {10.1080/03081087.2019.1702917},
+       URL = {https://doi.org/10.1080/03081087.2019.1702917},
+}
+		
+@article {MR4338341,
+    AUTHOR = {Chattopadhyay, Arup and Sain, Debmalya and Senapati, Tanusri},
+     TITLE = {characterization of symmetric points in {$l^n_p$}-spaces},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {69},
+      YEAR = {2021},
+    NUMBER = {16},
+     PAGES = {2998--3009},
+      ISSN = {0308-1087},
+   MRCLASS = {47L05 (46B20)},
+  MRNUMBER = {4338341},
+       DOI = {10.1080/03081087.2019.1702916},
+       URL = {https://doi.org/10.1080/03081087.2019.1702916},
+}
+		
+@article {MR4333773,
+    AUTHOR = {Mandal, Kalidas and Sain, Debmalya and Mal, Arpita and Paul,
+              Kallol},
+     TITLE = {Norm attainment set and symmetricity of operators on
+              {$\ell_p^2$}},
+   JOURNAL = {Adv. Oper. Theory},
+  FJOURNAL = {Advances in Operator Theory},
+    VOLUME = {7},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 3, 19},
+      ISSN = {2662-2009},
+   MRCLASS = {47L05 (46B20)},
+  MRNUMBER = {4333773},
+       DOI = {10.1007/s43036-021-00167-w},
+       URL = {https://doi.org/10.1007/s43036-021-00167-w},
+}
+		
 @article {MR4332957,
     AUTHOR = {Poria, Anirudha},
      TITLE = {Uncertainty principles for the {F}ourier and the short-time
@@ -260,6 +328,20 @@
   MRNUMBER = {4310348},
        DOI = {10.1080/07362994.2020.1845207},
        URL = {https://doi.org/10.1080/07362994.2020.1845207},
+}
+		
+@incollection {MR4309656,
+    AUTHOR = {Kanukurthi, Bhavana and Obbattu, Sai Lakshmi Bhavana and
+              Sekar, Sruthi and Tomy, Jenit},
+     TITLE = {Locally reconstructable non-malleable secret sharing},
+ BOOKTITLE = {2nd {C}onference on {I}nformation-{T}heoretic {C}ryptography},
+    SERIES = {LIPIcs. Leibniz Int. Proc. Inform.},
+    VOLUME = {199},
+     PAGES = {Art. No. 11, 19},
+ PUBLISHER = {Schloss Dagstuhl. Leibniz-Zent. Inform., Wadern},
+      YEAR = {2021},
+   MRCLASS = {94A62},
+  MRNUMBER = {4309656},
 }
 		
 @article {MR4305980,
