--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,20 @@
+@article {MR4354861,
+    AUTHOR = {Ganguly, Pritam and Manna, Ramesh and Thangavelu, Sundaram},
+     TITLE = {On a theorem of {C}hernoff on rank one {R}iemannian symmetric
+              spaces},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {282},
+      YEAR = {2022},
+    NUMBER = {5},
+     PAGES = {Paper No. 109351, 31},
+      ISSN = {0022-1236},
+   MRCLASS = {43A85 (22E30 33D45 43A25)},
+  MRNUMBER = {4354861},
+       DOI = {10.1016/j.jfa.2021.109351},
+       URL = {https://doi.org/10.1016/j.jfa.2021.109351},
+}
+		
 @article {MR4343968,
     AUTHOR = {Choudhury, Projesh Nath and Sivakumar, K. C.},
      TITLE = {Nesbitt and {S}hapiro cyclic sum inequalities for positive
