6-IIS-NDM articles retrieved

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -15,6 +15,34 @@
        URL = {https://doi.org/10.1016/j.jfa.2021.109351},
 }
 		
+@incollection {MR4353107,
+    AUTHOR = {Sridharan, Shrihari and Verma, Kaushal},
+     TITLE = {Complex dynamics},
+ BOOKTITLE = {Elements of dynamical systems},
+    SERIES = {Texts Read. Math.},
+    VOLUME = {79},
+     PAGES = {139--164},
+ PUBLISHER = {Hindustan Book Agency, Delhi},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {37F10},
+  MRNUMBER = {4353107},
+}
+				
+@article {MR4349135,
+    AUTHOR = {Khare, Apoorva and Tao, Terence},
+     TITLE = {On the sign patterns of entrywise positivity preservers in
+              fixed dimension},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {143},
+      YEAR = {2021},
+    NUMBER = {6},
+     PAGES = {1863--1929},
+      ISSN = {0002-9327},
+   MRCLASS = {15B48 (05E05 15B35 26A48 30B10)},
+  MRNUMBER = {4349135},
+}
+		
 @article {MR4343968,
     AUTHOR = {Choudhury, Projesh Nath and Sivakumar, K. C.},
      TITLE = {Nesbitt and {S}hapiro cyclic sum inequalities for positive
@@ -32,6 +60,38 @@
        URL = {https://doi.org/10.1007/s43036-021-00171-0},
 }
 		
+@article {MR4343717,
+    AUTHOR = {Reif, Shifra and Venkatesh, R.},
+     TITLE = {On tensor products of irreducible integrable representations},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {592},
+      YEAR = {2022},
+     PAGES = {402--423},
+      ISSN = {0021-8693},
+   MRCLASS = {17B10 (17B67)},
+  MRNUMBER = {4343717},
+       DOI = {10.1016/j.jalgebra.2021.11.007},
+       URL = {https://doi.org/10.1016/j.jalgebra.2021.11.007},
+}
+		
+		@article {MR4340929,
+    AUTHOR = {Ghosh, Subhroshekhar and Krishnapur, Manjunath},
+     TITLE = {Rigidity hierarchy in random point fields: random polynomials
+              and determinantal processes},
+   JOURNAL = {Comm. Math. Phys.},
+  FJOURNAL = {Communications in Mathematical Physics},
+    VOLUME = {388},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {1205--1234},
+      ISSN = {0010-3616},
+   MRCLASS = {60G55 (60G15 60G57)},
+  MRNUMBER = {4340929},
+       DOI = {10.1007/s00220-021-04254-0},
+       URL = {https://doi.org/10.1007/s00220-021-04254-0},
+}
+						
 @article {MR4338342,
     AUTHOR = {Sain, Debmalya},
      TITLE = {Smoothness and norm attainment of bounded bilinear operators
@@ -1124,6 +1184,23 @@
        URL = {https://doi.org/10.1016/j.exmath.2019.09.004},
 }
 		
+@article {MR4226649,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On {N}oetherian schemes over {$( C, \otimes, 1)$} and the
+              category of quasi-coherent sheaves},
+   JOURNAL = {Indiana Univ. Math. J.},
+  FJOURNAL = {Indiana University Mathematics Journal},
+    VOLUME = {70},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {81--119},
+      ISSN = {0022-2518},
+   MRCLASS = {14F06 (14A30 18F20 18M15)},
+  MRNUMBER = {4226649},
+       DOI = {10.1512/iumj.2021.70.8267},
+       URL = {https://doi.org/10.1512/iumj.2021.70.8267},
+}
+				
 @article {MR4222166,
     AUTHOR = {Nandakumaran, A. K. and Sufian, Abu},
      TITLE = {Oscillating {PDE} in a rough domain with a curved interface:
@@ -1470,6 +1547,21 @@ MRREVIEWER = {Yue-Qing Wang},
        DOI = {10.1002/rsa.20966},
        URL = {https://doi.org/10.1002/rsa.20966},
 }
+		
+@incollection {MR4179368,
+    AUTHOR = {Das, Soumya},
+     TITLE = {Omega results for {F}ourier coefficients of half-integral
+              weight and {S}iegel modular forms},
+ BOOKTITLE = {Modular forms and related topics in number theory},
+    SERIES = {Springer Proc. Math. Stat.},
+    VOLUME = {340},
+     PAGES = {59--72},
+ PUBLISHER = {Springer, Singapore},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {11F30 (11F37 11F46 11N37)},
+  MRNUMBER = {4179368},
+}
+		
 		
 @article {MR4174796,
     AUTHOR = {Khurana, Divya and Roy, Saikat and Sain, Debmalya},
@@ -1924,6 +2016,23 @@ MRREVIEWER = {Yue-Qing Wang},
        URL = {https://doi.org/10.1007/s43034-019-00048-7},
 }
 		
+@article {MR4123321,
+    AUTHOR = {Bottazzi, Tamara and Conde, Cristian and Sain, Debmalya},
+     TITLE = {A study of orthogonality of bounded linear operators},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {14},
+      YEAR = {2020},
+    NUMBER = {3},
+     PAGES = {1001--1018},
+      ISSN = {2662-2033},
+   MRCLASS = {47A63 (47A30 47L05)},
+  MRNUMBER = {4123321},
+MRREVIEWER = {Kallol Paul},
+       DOI = {10.1007/s43037-019-00050-0},
+       URL = {https://doi.org/10.1007/s43037-019-00050-0},
+}
+		
 @article {MR4123288,
     AUTHOR = {Mahadevan, Rajesh and Nandakumaran, A. K. and Prakash, Ravi},
      TITLE = {Homogenization of an elliptic equation in a domain with
@@ -1960,6 +2069,23 @@ MRREVIEWER = {Yue-Qing Wang},
        DOI = {10.4064/sm190505-8-10},
        URL = {https://doi.org/10.4064/sm190505-8-10},
 }
+		
+@article {MR4120316,
+    AUTHOR = {Bhosle, Usha N. and Singh, Sanjay Kumar},
+     TITLE = {Fourier-{M}ukai transform on a compactified {J}acobian},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2020},
+    NUMBER = {13},
+     PAGES = {3991--4015},
+      ISSN = {1073-7928},
+   MRCLASS = {14F08 (14H40 18G80)},
+  MRNUMBER = {4120316},
+MRREVIEWER = {Emre Coskun},
+       DOI = {10.1093/imrn/rny136},
+       URL = {https://doi.org/10.1093/imrn/rny136},
+}
+		
 		
 @article {MR4118669,
     AUTHOR = {Gupta, Rajeev and Misra, Gadadhar},
@@ -2661,7 +2787,41 @@ MRREVIEWER = {Andreas Nickel},
        URL = {https://doi.org/10.1063/1.5121245},
 }
 		
-@article {MR4042615,
+@article {MR4045194,
+    AUTHOR = {Lin, Alice and McSpirit, Eleanor and Vishnu, Adit},
+     TITLE = {Algebraic relations between partition functions and the
+              {$j$}-function},
+   JOURNAL = {Res. Number Theory},
+  FJOURNAL = {Research in Number Theory},
+    VOLUME = {6},
+      YEAR = {2020},
+    NUMBER = {1},
+     PAGES = {Paper No. 2, 15},
+      ISSN = {2522-0160},
+   MRCLASS = {11F37 (11F03 11P81 11P82)},
+  MRNUMBER = {4045194},
+MRREVIEWER = {Jeremy Lovejoy},
+       DOI = {10.1007/s40993-019-0177-7},
+       URL = {https://doi.org/10.1007/s40993-019-0177-7},
+}
+		
+@article {MR4045154,
+    AUTHOR = {Roth, Julien and Upadhyay, Abhitosh},
+     TITLE = {{$f$}-biharmonic submanifolds of generalized space forms},
+   JOURNAL = {Results Math.},
+  FJOURNAL = {Results in Mathematics},
+    VOLUME = {75},
+      YEAR = {2020},
+    NUMBER = {1},
+     PAGES = {Paper No. 20, 25},
+      ISSN = {1422-6383},
+   MRCLASS = {53C42 (53C43)},
+  MRNUMBER = {4045154},
+MRREVIEWER = {Leonard Todjihounde},
+       DOI = {10.1007/s00025-019-1142-4},
+       URL = {https://doi.org/10.1007/s00025-019-1142-4},
+}
+		@article {MR4042615,
     AUTHOR = {Maitra, Anwoy},
      TITLE = {A form of {S}chwarz's lemma and a bound for the {K}obayashi
               metric on convex domains},
@@ -2983,6 +3143,23 @@ MRREVIEWER = {Elisabetta Maluta},
   MRNUMBER = {3995088},
        DOI = {10.1007/s13226-019-0355-2},
        URL = {https://doi.org/10.1007/s13226-019-0355-2},
+}
+		
+@article {MR3995080,
+    AUTHOR = {Bhosle, Usha N.},
+     TITLE = {Recent results on vector bundles, principal bundles and
+              related topics},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {50},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {635--664},
+      ISSN = {0019-5588},
+   MRCLASS = {14-02 (14J60 53C05)},
+  MRNUMBER = {3995080},
+       DOI = {10.1007/s13226-019-0347-2},
+       URL = {https://doi.org/10.1007/s13226-019-0347-2},
 }
 		
 @article {MR3995078,
@@ -4241,6 +4418,23 @@ MRREVIEWER = {Vasile Lauric},
        URL = {https://doi.org/10.1093/qmath/hay012},
 }
 
+@article {MR3858407,
+    AUTHOR = {Bhosle, Usha N.},
+     TITLE = {Embedding of a compactified {J}acobian and theta divisors},
+   JOURNAL = {Manuscripta Math.},
+  FJOURNAL = {Manuscripta Mathematica},
+    VOLUME = {157},
+      YEAR = {2018},
+    NUMBER = {3-4},
+     PAGES = {361--385},
+      ISSN = {0025-2611},
+   MRCLASS = {14H60},
+  MRNUMBER = {3858407},
+MRREVIEWER = {Sanjay Amrutiya},
+       DOI = {10.1007/s00229-018-1002-7},
+       URL = {https://doi.org/10.1007/s00229-018-1002-7},
+}
+		
 @article {MR3848067,
     AUTHOR = {Banerjee, Abhishek},
      TITLE = {On {A}uslander's formula and cohereditary torsion pairs},
@@ -4429,6 +4623,22 @@ MRREVIEWER = {Hideshi Takayanagi},
        URL = {https://doi.org/10.1103/physreve.97.012151},
 }
 
+@incollection {MR3828291,
+    AUTHOR = {Baskar, S. and Murti, R. and Prasad, P.},
+     TITLE = {Kinematical conservation laws in inhomogeneous media},
+ BOOKTITLE = {Theory, numerics and applications of hyperbolic problems.
+              {II}},
+    SERIES = {Springer Proc. Math. Stat.},
+    VOLUME = {237},
+     PAGES = {349--361},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2018},
+   MRCLASS = {35L65 (35L67)},
+  MRNUMBER = {3828291},
+       DOI = {10.1007/978-3-319-91548-7\_27},
+       URL = {https://doi.org/10.1007/978-3-319-91548-7_27},
+}
+		
 @article {MR3826476,
     AUTHOR = {Ciaurri, \'{O}scar and Roncal, Luz and Thangavelu, Sundaram},
      TITLE = {Hardy-type inequalities for fractional powers of the
@@ -6203,6 +6413,27 @@ MRREVIEWER = {Dejun Wu},
        URL = {http://dx.doi.org/10.1007/s40879-016-0108-2},
 }
 
+@article {MR3531852,
+    AUTHOR = {Bhosle, Usha N. and Singh, Sanjay},
+     TITLE = {Weak point property and sections of {P}icard bundles on a
+              compactified {J}acobian over a nodal curve},
+   JOURNAL = {Proc. Indian Acad. Sci. Math. Sci.},
+  FJOURNAL = {Indian Academy of Sciences. Proceedings. Mathematical
+              Sciences},
+    VOLUME = {126},
+      YEAR = {2016},
+    NUMBER = {3},
+     PAGES = {329--339},
+      ISSN = {0253-4142},
+   MRCLASS = {14H60 (14D20)},
+  MRNUMBER = {3531852},
+MRREVIEWER = {Cristian V. Anghel},
+       DOI = {10.1007/s12044-016-0290-7},
+       URL = {https://doi.org/10.1007/s12044-016-0290-7},
+}
+		
+		
+		
 @article {MR3529198,
     AUTHOR = {Ghosh, Mrinal K. and Kumar, K. Suresh and Pal, Chandan},
      TITLE = {Zero-sum risk-sensitive stochastic games for continuous time
@@ -7079,6 +7310,25 @@ MRREVIEWER = {Yehonatan Salman},
        URL = {https://doi.org/10.1007/978-3-319-18182-0},
 }
 
+@article {MR3408013,
+    AUTHOR = {Bharali, Gautam and Minda, David and Ponnusamy, Saminathan and
+              Sahoo, Swadesh Kumar},
+     TITLE = {Preface [{P}roceedings of the {I}nternational {S}ymposium on
+              {C}omplex {A}nalysis and {C}onformal {G}eometry ({ISCACG}
+              2013)]},
+      NOTE = {Held at the Indian Institute of Technology, Indore, December
+              28--30, 2013},
+   JOURNAL = {J. Anal.},
+  FJOURNAL = {The Journal of Analysis},
+    VOLUME = {21},
+      YEAR = {2013},
+     PAGES = {i--ii},
+      ISSN = {0971-3611},
+   MRCLASS = {00B25 (00B30)},
+  MRNUMBER = {3408013},
+}
+		
+		
 @article {MR3407607,
     AUTHOR = {Jaban, Meher and Sneh Bala, Sinha},
      TITLE = {Some infinite sums identities},
@@ -8803,6 +9053,23 @@ MRREVIEWER = {Nataliya I. Kalashnykova},
        URL = {http://dx.doi.org/10.1090/S0025-5718-2013-02728-7},
 }
 
+@proceedings {MR3137669,
+     TITLE = {Commutative algebra and algebraic geometry ({CAAG}-2010)},
+    SERIES = {Ramanujan Mathematical Society Lecture Notes Series},
+    VOLUME = {17},
+ BOOKTITLE = {Proceedings of the conference held in honor of {B}alwant
+              {S}ingh, {U}we {S}torch and {R}ajendra {V}. {G}urjar at the
+              {I}ndian {I}nstitute of {S}cience, {B}angalore, {D}ecember
+              6--10, 2010},
+    EDITOR = {Flenner, Hubert and Patil, Dilip P.},
+ PUBLISHER = {Ramanujan Mathematical Society, Mysore},
+      YEAR = {2013},
+     PAGES = {xx+218},
+      ISBN = {978-93-80416-10-6},
+   MRCLASS = {14-06 (13-06)},
+  MRNUMBER = {3137669},
+}
+		
 @article {MR3136892,
     AUTHOR = {Misra, Gadadhar},
      TITLE = {Differentiation, homogeneous operators and matrix valued
@@ -9666,6 +9933,24 @@ MRREVIEWER = {Francine A. Meylan},
        URL = {http://dx.doi.org/10.4171/RMI/704},
 }
 
+@article {MR2989642,
+    AUTHOR = {Biswas, Indranil and Mj, Mahan and Seshadri, Harish},
+     TITLE = {3-manifold groups, {K}\"{a}hler groups and complex surfaces},
+   JOURNAL = {Commun. Contemp. Math.},
+  FJOURNAL = {Communications in Contemporary Mathematics},
+    VOLUME = {14},
+      YEAR = {2012},
+    NUMBER = {6},
+     PAGES = {1250038, 24},
+      ISSN = {0219-1997},
+   MRCLASS = {57M50 (14F35 32J15 32Q15)},
+  MRNUMBER = {2989642},
+MRREVIEWER = {Alexandru Dimca},
+       DOI = {10.1142/S0219199712500381},
+       URL = {https://doi.org/10.1142/S0219199712500381},
+}
+		
+		
 @article {MR2984735,
     AUTHOR = {Borah, Diganta and Verma, Kaushal},
      TITLE = {Remarks on the metric induced by the {R}obin function},
@@ -10384,7 +10669,53 @@ MRREVIEWER = {Mohammad Asadzadeh},
   MRNUMBER = {2840857},
 }
 
-@article {MR2839259,
+@proceedings {MR2840856,
+     TITLE = {Proceedings of the {I}nternational {C}ongress of
+              {M}athematicians. {V}olume {III}},
+    EDITOR = {Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and
+              Srinivas, V. and Vanninathan, M.},
+      NOTE = {Invited lectures,
+              Held in Hyderabad, August 19--27, 2010},
+ PUBLISHER = {Hindustan Book Agency, New Delhi; distributed by World
+              Scientific Publishing Co. Pte. Ltd., Singapore},
+      YEAR = {2010},
+     PAGES = {i--viii and 1183--2173},
+      ISBN = {978-81-85931-08-3; 978-981-4324-33-5; 981-4324-33-7},
+   MRCLASS = {00B20},
+  MRNUMBER = {2840856},
+}
+		
+@proceedings {MR2840855,
+     TITLE = {Proceedings of the {I}nternational {C}ongress of
+              {M}athematicians. {V}olume {II}},
+    EDITOR = {Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and
+              Srinivas, V. and Vanninathan, M.},
+      NOTE = {Invited lectures,
+              Held in Hyderabad, August 19--27, 2010},
+ PUBLISHER = {Hindustan Book Agency, New Delhi; distributed by World
+              Scientific Publishing Co. Pte. Ltd., Singapore},
+      YEAR = {2010},
+     PAGES = {viii+1181},
+      ISBN = {978-81-85931-08-3; 978-981-4324-32-8; 981-4324-32-9},
+   MRCLASS = {00B20},
+  MRNUMBER = {2840855},
+}
+		
+@proceedings {MR2840854,
+     TITLE = {Proceedings of the {I}nternational {C}ongress of
+              {M}athematicians. {V}olume {I}},
+    EDITOR = {Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and
+              Srinivas, V. and Vanninathan, M.},
+      NOTE = {Plenary lectures and ceremonies,
+              Held in Hyderabad, August 19--27, 2010},
+ PUBLISHER = {Hindustan Book Agency, New Delhi; distributed by World
+              Scientific Publishing Co. Pte. Ltd., Singapore},
+      YEAR = {2010},
+     PAGES = {x+803},
+      ISBN = {978-81-85931-08-3; 978-981-4324-31-1; 981-4324-31-0},
+   MRCLASS = {00B20},
+  MRNUMBER = {2840854},
+}		@article {MR2839259,
     AUTHOR = {Chakrabarti, A.},
      TITLE = {Riemann-{H}ilbert problems associated with singular integral
               equations and their solutions},
